Radio buttons to choose the language we want in each page

--- a/src/main/resources/com/example/knk_grupi22/dashboard.fxml
+++ b/src/main/resources/com/example/knk_grupi22/dashboard.fxml
@@ -23,10 +23,30 @@
 
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1300.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.DashboardController">
    <children>
-      <AnchorPane fx:id="dashboardPane" prefHeight="200.0" prefWidth="200.0" visible="false">
+      <AnchorPane fx:id="dashboardPane" prefHeight="200.0" prefWidth="200.0">
          <children>
             <AnchorPane prefHeight="700.0" prefWidth="265.0" style="-fx-background-color: linear-gradient(to left, #1f4037, #99f2c8);">
                <children>
+                  <RadioButton fx:id="language_AL_button1" layoutX="77.0" layoutY="14.0" mnemonicParsing="false" text="AL" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </RadioButton>
+                  <RadioButton fx:id="language_EN_button1" layoutX="177.0" layoutY="14.0" mnemonicParsing="false" text="EN" textFill="WHITE">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </RadioButton>
+                  <ImageView fitHeight="25.0" fitWidth="30.0" layoutX="42.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../img/download.jpg" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="60.0" fitWidth="29.0" layoutX="140.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../img/downloadd.png" />
+                     </image>
+                  </ImageView>
                   <Button fx:id="dashboard_Btn" layoutX="24.0" layoutY="252.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="47.0" prefWidth="218.0" style="-fx-background-color: linear-gradient(to left, #373B44, #4286f4); -fx-cursor: hand;" text="Dashboard" textFill="WHITE">
                      <graphic>
                         <FontAwesomeIcon fill="WHITE" glyphName="HOME" size="1.7em" />
@@ -43,7 +63,7 @@
                         <Font name="Tahoma Bold" size="20.0" />
                      </font>
                   </Button>
-                  <Label layoutX="47.0" layoutY="47.0" text="WELCOME," textFill="WHITE">
+                  <Label layoutX="48.0" layoutY="77.0" text="WELCOME," textFill="WHITE">
                      <font>
                         <Font name="Georgia Bold" size="30.0" />
                      </font>
@@ -53,7 +73,7 @@
                         <Font name="Tahoma Bold" size="15.0" />
                      </font>
                   </Button>
-                  <Label layoutX="80.0" layoutY="93.0" text="ADMIN" textFill="WHITE">
+                  <Label layoutX="81.0" layoutY="123.0" text="ADMIN" textFill="WHITE">
                      <font>
                         <Font name="Georgia Bold" size="30.0" />
                      </font>
@@ -180,9 +200,9 @@
             </HBox>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="managePane" layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0">
+      <AnchorPane fx:id="managePane" layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0" visible="false">
          <children>
-            <AnchorPane maxWidth="265.0" prefHeight="700.0" prefWidth="265.0" style="-fx-background-color: linear-gradient(to left, #1f4037, #99f2c8);">
+            <AnchorPane maxHeight="800.0" maxWidth="265.0" prefHeight="700.0" prefWidth="265.0" style="-fx-background-color: linear-gradient(to left, #1f4037, #99f2c8);" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
                   <Button fx:id="dashboard_Btn1" layoutX="24.0" layoutY="252.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="47.0" prefWidth="218.0" styleClass="nav-button" stylesheets="@../../../css/dashboard.css" text="Dashboard" textFill="WHITE">
                      <graphic>
@@ -205,7 +225,7 @@
                         <Font name="Georgia Bold" size="30.0" />
                      </font>
                   </Label>
-                  <Button fx:id="logout_Btn1" alignment="CENTER" layoutX="24.0" layoutY="624.0" mnemonicParsing="false" onAction="#logout" prefHeight="43.0" prefWidth="218.0" style="-fx-cursor: hand; -fx-background-color: linear-gradient(to left, #373B44, #4286f4);" text="Sign Out" textFill="WHITE">
+                  <Button fx:id="logout_Btn1" alignment="CENTER" layoutX="24.0" layoutY="624.0" mnemonicParsing="false" onAction="#logout" prefHeight="43.0" prefWidth="218.0" style="-fx-cursor: hand; -fx-background-color: linear-gradient(to left, #373B44, #4286f4);" text="Sign Out" textFill="WHITE" AnchorPane.bottomAnchor="32.8">
                      <font>
                         <Font name="Tahoma Bold" size="15.0" />
                      </font>
@@ -215,22 +235,22 @@
                         <Font name="Georgia Bold" size="30.0" />
                      </font>
                   </Label>
-                  <RadioButton fx:id="language_AL_button" layoutX="40.0" layoutY="14.0" mnemonicParsing="false" text="AL" textFill="WHITE">
+                  <RadioButton fx:id="language_AL_button" layoutX="77.0" layoutY="14.0" mnemonicParsing="false" text="AL" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </RadioButton>
-                  <RadioButton fx:id="language_EN_button" layoutX="140.0" layoutY="14.0" mnemonicParsing="false" text="EN" textFill="WHITE">
+                  <RadioButton fx:id="language_EN_button" layoutX="177.0" layoutY="14.0" mnemonicParsing="false" text="EN" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </RadioButton>
-                  <ImageView fitHeight="25.0" fitWidth="30.0" layoutX="5.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="25.0" fitWidth="30.0" layoutX="42.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../../img/download.jpg" />
                      </image>
                   </ImageView>
-                  <ImageView fitHeight="60.0" fitWidth="29.0" layoutX="103.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="60.0" fitWidth="29.0" layoutX="140.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../../img/downloadd.png" />
                      </image>
@@ -245,13 +265,13 @@
                         <String fx:value="white-bg" />
                      </styleClass>
                      <children>
-                        <AnchorPane layoutX="6.0" prefHeight="317.0" prefWidth="1010.0" stylesheets="@../../../css/dashboard.css" AnchorPane.bottomAnchor="366.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <AnchorPane layoutX="6.0" prefHeight="317.0" prefWidth="1010.0" stylesheets="@../../../css/dashboard.css" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <styleClass>
                               <String fx:value="shadow" />
                               <String fx:value="white-bg" />
                            </styleClass>
                            <children>
-                              <TableView fx:id="tableView_Employed" layoutX="7.0" layoutY="69.0" onMouseClicked="#showDataOnTextfields" prefHeight="237.0" prefWidth="1002.0" styleClass="table" stylesheets="@../../../css/dashboard.css">
+                              <TableView fx:id="tableView_Employed" layoutX="7.0" layoutY="69.0" onMouseClicked="#showDataOnTextfields" prefHeight="237.0" prefWidth="1002.0" styleClass="table" stylesheets="@../../../css/dashboard.css" AnchorPane.leftAnchor="7.0" AnchorPane.rightAnchor="6.600000000000023">
                                  <columns>
                                     <TableColumn fx:id="tableView_ID" prefWidth="101.60003662109375" style="-fx-text-alignment: center;" text="ID" />
                                     <TableColumn fx:id="tableView_Emri" prefWidth="108.0" text="Emri" />
@@ -263,7 +283,7 @@
                                     <TableColumn fx:id="tableView_Kompania" prefWidth="121.5999755859375" text="Kompania" />
                                  </columns>
                               </TableView>
-                              <TextField fx:id="table_search" alignment="CENTER_RIGHT" layoutX="671.0" layoutY="18.0" prefHeight="36.0" prefWidth="335.0" promptText="Search" styleClass="textfield" stylesheets="@../../../css/dashboard.css">
+                              <TextField fx:id="table_search" alignment="CENTER_RIGHT" layoutX="671.0" layoutY="18.0" prefHeight="36.0" prefWidth="335.0" promptText="Search" styleClass="textfield" stylesheets="@../../../css/dashboard.css" AnchorPane.rightAnchor="9.800000000000011">
                                  <padding>
                                     <Insets right="35.0" />
                                  </padding>
@@ -271,6 +291,7 @@
                                     <Font name="System Bold" size="14.0" />
                                  </font>
                               </TextField>
+                              <FontAwesomeIcon glyphName="SEARCH" layoutX="980.0" layoutY="41.0" size="1.3em" AnchorPane.rightAnchor="21.51428508758545" />
                            </children>
                         </AnchorPane>
                         <Label layoutX="210.0" layoutY="348.0" text="ID" textFill="#109152">
