--- a/src/main/resources/com/example/knk_grupi22/login.fxml
+++ b/src/main/resources/com/example/knk_grupi22/login.fxml
@@ -15,7 +15,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
    <right>
-      <AnchorPane prefHeight="400.0" prefWidth="300.0" BorderPane.alignment="CENTER">
+      <AnchorPane maxWidth="800.0" prefHeight="400.0" prefWidth="300.0" BorderPane.alignment="CENTER">
          <children>
             <FontAwesomeIcon fill="#109152" glyphName="USER" layoutX="49.0" layoutY="145.0" size="2em" />
             <TextField fx:id="tf_Username" layoutX="75.0" layoutY="124.0" prefHeight="26.0" prefWidth="151.0" promptText="Username" styleClass="btn" stylesheets="@../../../css/signup.css" />
@@ -55,7 +55,7 @@
       </AnchorPane>
    </right>
    <center>
-      <AnchorPane prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: linear-gradient(to left, #1f4037, #99f2c8);" BorderPane.alignment="CENTER">
+      <AnchorPane maxWidth="800.0" prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: linear-gradient(to left, #1f4037, #99f2c8);" BorderPane.alignment="TOP_LEFT">
          <children>
             <Label layoutX="95.0" layoutY="294.0" text="E-Alumni" textFill="WHITE">
                <font>
