--- a/src/main/resources/com/example/knk_grupi22/login.fxml
+++ b/src/main/resources/com/example/knk_grupi22/login.fxml
@@ -57,9 +57,9 @@
    <center>
       <AnchorPane maxWidth="800.0" prefHeight="400.0" prefWidth="300.0" style="-fx-background-color: linear-gradient(to left, #1f4037, #99f2c8);" BorderPane.alignment="TOP_LEFT">
          <children>
-            <Label layoutX="95.0" layoutY="294.0" text="E-Alumni" textFill="WHITE">
+            <Label layoutX="99.0" layoutY="291.0" text="E-Alumni" textFill="WHITE">
                <font>
-                  <Font name="Arial" size="27.0" />
+                  <Font name="Calibri Bold" size="27.0" />
                </font>
             </Label>
             <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="75.0" layoutY="96.0" pickOnBounds="true" preserveRatio="true">
