--- a/src/main/resources/com/example/knk_grupi22/sign-up.fxml
+++ b/src/main/resources/com/example/knk_grupi22/sign-up.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -15,14 +16,34 @@
    <left>
       <AnchorPane prefHeight="400.0" prefWidth="261.0" style="-fx-background-color: linear-gradient(to left, #1f4037, #99f2c8);" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="56.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
+            <RadioButton fx:id="language_AL_button1" layoutX="49.0" layoutY="14.0" mnemonicParsing="false" text="AL" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </RadioButton>
+            <RadioButton fx:id="language_EN_button1" layoutX="149.0" layoutY="14.0" mnemonicParsing="false" text="EN" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </RadioButton>
+            <ImageView fitHeight="25.0" fitWidth="30.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../img/download.jpg" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="60.0" fitWidth="29.0" layoutX="112.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../img/downloadd.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="56.0" layoutY="86.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../img/fiek-logo-photoaidcom-cropped.jpg" />
                </image>
             </ImageView>
-            <Label layoutX="69.0" layoutY="223.0" text="E-Alumni" textFill="WHITE">
+            <Label layoutX="75.0" layoutY="274.0" text="E-Alumni" textFill="WHITE">
                <font>
-                  <Font name="Tahoma Bold" size="27.0" />
+                  <Font name="Calibri Bold" size="27.0" />
                </font>
             </Label>
          </children>
@@ -31,22 +52,22 @@
    <center>
       <AnchorPane prefHeight="400.0" prefWidth="506.0" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="29.0" layoutY="107.0" prefHeight="18.0" prefWidth="59.0" text="First Name">
+            <Label fx:id="firstName_Label" layoutX="19.0" layoutY="106.0" prefHeight="18.0" prefWidth="59.0" text="First Name">
                <font>
                   <Font name="Arial" size="12.0" />
                </font></Label>
-            <Label layoutX="247.0" layoutY="108.0" text="Last Name">
+            <Label fx:id="lastName_Label" layoutX="247.0" layoutY="108.0" text="Last Name">
                <font>
                   <Font name="Arial" size="12.0" />
                </font></Label>
             <TextField fx:id="firstName" layoutX="91.0" layoutY="103.0" prefHeight="26.0" prefWidth="146.0" promptText="First Name" styleClass="btn" stylesheets="@../../../css/signup.css" />
             <TextField fx:id="lastName" layoutX="307.0" layoutY="103.0" prefHeight="26.0" prefWidth="138.0" promptText="Last Name" styleClass="btn" stylesheets="@../../../css/signup.css" />
             <FontAwesomeIcon fill="#109152" glyphName="USER_PLUS" layoutX="212.0" layoutY="65.0" size="5em" />
-            <Label layoutX="49.0" layoutY="149.0" prefHeight="18.0" prefWidth="34.0" style="-fx-font-family: Arial;" text="Email" />
-            <Label layoutX="33.0" layoutY="230.0" style="-fx-font-family: Arial;" text="Password" />
+            <Label fx:id="email_Label" layoutX="49.0" layoutY="148.0" prefHeight="18.0" prefWidth="34.0" style="-fx-font-family: Arial;" text="Email" />
+            <Label fx:id="password_Label" layoutX="23.0" layoutY="231.0" style="-fx-font-family: Arial;" text="Password" />
             <TextField fx:id="email" layoutX="91.0" layoutY="144.0" prefHeight="27.0" prefWidth="241.0" promptText="example@gmail.com" styleClass="btn" stylesheets="@../../../css/signup.css" />
 
-            <Label layoutX="125.0" layoutY="315.0" style="-fx-text-fill: black;" text="Already have an account?">
+            <Label fx:id="alreadyHave_Label" layoutX="125.0" layoutY="315.0" style="-fx-text-fill: black;" text="Already have an account?">
                <font>
                   <Font size="14.0" />
                </font>
@@ -60,12 +81,12 @@
                </graphic>
             </Button>
             <Button fx:id="signUpBtn" layoutX="100.0" layoutY="274.0" mnemonicParsing="false" onAction="#signUp" prefHeight="26.0" prefWidth="274.0" style="-fx-cursor: hand; -fx-background-color: black;" styleClass="btn" stylesheets="@../../../css/signup.css" text="Sign up" textFill="WHITE" />
-            <Button layoutX="283.0" layoutY="302.0" mnemonicParsing="false" onAction="#switchToLogin" prefHeight="46.0" prefWidth="65.0" style="-fx-background-color: transparent; -fx-text-fill: #109152; -fx-cursor: hand;" text="Log in">
+            <Button fx:id="switchToLogin_Btn" layoutX="267.0" layoutY="302.0" mnemonicParsing="false" onAction="#switchToLogin" prefHeight="46.0" prefWidth="82.0" style="-fx-background-color: transparent; -fx-text-fill: #109152; -fx-cursor: hand;" text="Log in">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
             </Button>
-            <Label layoutX="32.0" layoutY="191.0" style="-fx-font-family: Arial;" text="Username" />
+            <Label fx:id="username_Label" layoutX="21.0" layoutY="192.0" style="-fx-font-family: Arial;" text="Username" />
             <Button fx:id="hideBtn" layoutX="303.0" layoutY="226.0" mnemonicParsing="false" onAction="#hidePassword" prefHeight="26.0" prefWidth="30.0" style="-fx-background-color: transparent; -fx-cursor: hand;" visible="false">
                <graphic>
                   <FontAwesomeIcon glyphName="EYE" />
