--- a/src/main/resources/com/example/knk_grupi22/login.fxml
+++ b/src/main/resources/com/example/knk_grupi22/login.fxml
@@ -35,7 +35,7 @@
                   <Font name="System Bold" size="15.0" />
                </font>
             </Button>
-            <Button fx:id="forgotPassword_btn" layoutX="53.0" layoutY="252.0" mnemonicParsing="false" prefHeight="2.0" prefWidth="172.0" style="-fx-background-color: transparent; -fx-text-fill: blue; -fx-cursor: hand;" text="Forgot your password?" />
+            <Button fx:id="forgotPassword_btn" layoutX="53.0" layoutY="252.0" mnemonicParsing="false" onAction="#forgotPassword" prefHeight="2.0" prefWidth="172.0" style="-fx-background-color: transparent; -fx-text-fill: blue; -fx-cursor: hand;" text="Forgot your password?" />
             <Button fx:id="buttonShowPassword" layoutX="201.0" layoutY="168.0" mnemonicParsing="false" onAction="#showPassword" prefHeight="26.0" prefWidth="14.0" style="-fx-background-color: transparent; -fx-cursor: hand;">
                <graphic>
                   <FontAwesomeIcon glyphName="EYE" />
