--- a/src/main/resources/com/example/knk_grupi22/dashboard.fxml
+++ b/src/main/resources/com/example/knk_grupi22/dashboard.fxml
@@ -94,7 +94,7 @@
                         <Insets left="15.0" top="13.0" />
                      </HBox.margin>
                      <children>
-                        <Label layoutX="34.0" layoutY="95.0" prefHeight="38.0" prefWidth="167.0" text="Të punësuarit total:" textFill="WHITE">
+                        <Label fx:id="totalEmployedLabel" layoutX="34.0" layoutY="95.0" prefHeight="38.0" prefWidth="167.0" text="Të punësuarit total:" textFill="WHITE">
                            <font>
                               <Font name="Arial Bold" size="18.0" />
                            </font>
@@ -113,7 +113,7 @@
                   </AnchorPane>
                   <AnchorPane layoutX="30.0" layoutY="21.0" maxHeight="150.0" prefHeight="150.0" prefWidth="284.0" stylesheets="@../../../css/dashboard.css">
                      <children>
-                        <Label layoutX="15.0" layoutY="95.0" prefHeight="38.0" prefWidth="218.0" text="Të punësuarit meshkuj:" textFill="WHITE">
+                        <Label fx:id="totalMaleLabel" layoutX="15.0" layoutY="95.0" prefHeight="38.0" prefWidth="218.0" text="Të punësuarit meshkuj:" textFill="WHITE">
                            <font>
                               <Font name="Arial Bold" size="18.0" />
                            </font>
@@ -135,7 +135,7 @@
                   </AnchorPane>
                   <AnchorPane layoutX="373.0" layoutY="21.0" maxHeight="150.0" prefHeight="150.0" prefWidth="284.0" stylesheets="@../../../css/dashboard.css">
                      <children>
-                        <Label layoutX="15.0" layoutY="95.0" prefHeight="38.0" prefWidth="218.0" text="Të punësuaret femra:" textFill="WHITE">
+                        <Label fx:id="totalFemaleLabel" layoutX="15.0" layoutY="95.0" prefHeight="38.0" prefWidth="218.0" text="Të punësuaret femra:" textFill="WHITE">
                            <font>
                               <Font name="Arial Bold" size="18.0" />
                            </font>
